<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/background_image"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/readRulesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_rules"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/readRulesButton"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/rulesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:padding="16dp" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>